Validated enrollment removed weight and height mandatory, hts initial and confirmatory validated for consent, greencard enabled wizard to go backward

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -912,7 +912,7 @@
 					<td colspan="2"></td>
 					<td>Weight</td>
 					<td>
-						<obs id="weight" conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true" />
+						<obs id="weight" conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"  />
 						kg
 					</td>
 
@@ -922,7 +922,7 @@
 					<td colspan="2"></td>
 					<td>Height</td>
 					<td>
-						<obs id="height" conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true" />
+						<obs id="height" conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
 						cm
 					</td>
 
